2008-08-27  Mirco Bauer <meebey@meebey.net> 

	* MainWindow.cs, Preferences/ServerListView.cs, Preferences/ServerView.cs,
	  Preferences/PreferencesDialog.cs, AboutDialog.cs, QuickConnectDialog.cs:
	  Set TransientFor property correctly for all dialogs. (thanks to George
	  Retsinas for reporting this)

2008-08-25  Mirco Bauer <meebey@meebey.net> 

	* Makefile.am, smuxi-frontend-gnome.pc.in: Removed unneeded pkg-config
	  files.

2008-08-25  Mirco Bauer <meebey@meebey.net> 

	* Frontend.cs, EngineManagerDialog.cs, Notebook.cs: Fixed switching between
	  local engine and remote engine back and forth. (closes trac bug #106)

2008-08-25  Mirco Bauer <meebey@meebey.net> 

	* GnomeUI.cs: Disabled highlight reset hack in SyncChat() as that confuses
	  local engine users (as it causes a bug for the first message) and
	  doesn't really help remote engine users anyway (as they miss highlights
	  they received since the last connect).

2008-08-24  Mirco Bauer <meebey@meebey.net> 

	* MainWindow.cs, Entry.cs: Moved ctrl+page up/down handling to menu.

2008-08-24  Mirco Bauer <meebey@meebey.net> 

	* MainWindow.cs, Frontend.cs: Implemented store and restore window size /
	  position. (closes trac ticket #91)

2008-08-24  Mirco Bauer <meebey@meebey.net> 

	* EngineManagerDialog.cs, Entry.cs, Frontend.cs: Use _() wrapper.

2008-08-24  Mirco Bauer <meebey@meebey.net> 

	* Frontend.cs: Initialize gettext during startup.

2008-08-22  Mirco Bauer <meebey@meebey.net> 

	* Chats/ChatView.cs: Disabled console writelines.
	
	  Use Process.Start() if not compiled with UI_GNOME.

2008-08-22  Mirco Bauer <meebey@meebey.net> 

	* Frontend.cs: Implemtend ShowError(string) method.
	* Preferences/ServerListView.cs: Handle InvalidOperationException.

2008-08-22  Mirco Bauer <meebey@meebey.net> 

	* Chats/ChatView.cs: Support empty timestamp formats. (closes trac bug #84)

2008-08-21  Mirco Bauer <meebey@meebey.net> 

	* Preferences/PreferencesDialog.cs: Use the more descriptive "<System